ansible/files/manifests/device-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dgw
spec:
  strategy: {}
  selector:
    matchLabels:
      app: dgw
  replicas: 1
  template:
    metadata:
      labels:
        app: dgw
    spec:
      containers:
        - name: container
          image: quay.io/yono/dgw:3.3.0-amd64
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
            - containerPort: 52220
              protocol: TCP
          volumeMounts:
          - mountPath: "/etc/dxpgateway"
            name: pvc-dxpgateway
          - mountPath: /mnt/sdcard
            name: pvc-sdcard
          - mountPath: /mnt/sdcard/DeviceGateway.lic
            name: license
          - mountPath: /etc/dxpgateway/config/setting.dxg.tpl
            subPath: setting.dxg.tpl
            name: setting
          # - mountPath: /etc/dxpgateway/config/setting.dxg.tpl
          #   name: setting
          securityContext:
            privileged: true
            # runAsUser: 1002
            # runAsGroup: 1002
          # resources:
          #   requests:
          #     memory: "1Gi"
          #     cpu: "1"
          #   limits:
          #     memory: "512Mi"
          #     cpu: "500m"
      volumes:
      - name: pvc-dxpgateway
        persistentVolumeClaim:
          claimName: pvc-dxpgateway
      - name: pvc-sdcard
        persistentVolumeClaim:
          claimName: pvc-sdcard
      - name: license
        hostPath:
          path: /home/redhat/device-gateway/DeviceGateway.lic
          type: File
      # - name: setting
      #   hostPath:
      #     path: /home/redhat/device-gateway/setting.dxg.tpl
      #     type: File
      - name: setting
        configMap:
          name: dgw-settings
          items:
            - key: setting.dxg.tpl
              path: setting.dxg.tpl
      serviceAccount: dgw
      serviceAccountName: dgw
