ansible/files/manifests/device-gateway/service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    skupper.io/address: dgw-proxy
    skupper.io/port: '80'
    skupper.io/proxy: tcp
  name: dgw
  labels:
    app: dgw
spec:
  type: NodePort
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 80
    - name: 443-tcp
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: dgw
