ansible/files/manifests/device-gateway/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dgw
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: dgw
    weight: 100
  wildcardPolicy: None
